@@ -3023,7 +3023,7 @@ function date_to_epoch ( $d ) {
 function get_weekday_before ( $year, $month, $day=2 ) {
   global $WEEK_START, $DISPLAY_WEEKENDS;
   
-  $laststr = ( $WEEK_START == 1 || $DISPLAY_WEEKENDS == 'N' ? 'last Mon':'last Sun' );
+  $laststr = ( $WEEK_START == 1 || $DISPLAY_WEEKENDS == 'N' ? 'last Monday':'last Sunday' );
   //we default day=2 so if the 1ast is Sunday or Monday it will return the 1st
   $newdate = strtotime ( $laststr, mktime ( 0, 0, 0, $month, $day, $year ) );
   return $newdate;
@@ -4575,244 +4575,6 @@ function fake_mail ( $mailto, $subj, $text, $hdrs ) {
     nl2br ( $hdrs ) . "<br />\n" .
     nl2br ( $text );
 }
-
-/**
- * Prints all the entries in a time bar format for the specified user for the
- * specified date.
- *
- * If we are displaying data from someone other than the logged in user, then
- * check the access permission of the entry.
- *
- * @param string $date Date in YYYYMMDD format
- * @param string $user Username
- * @param bool   $ssi  Should we not include links to add new events?
- */
-function print_date_entries_timebar ( $date, $user, $ssi ) {
-  global $events, $readonly, $is_admin, $DISPLAY_UNAPPROVED,
-    $PUBLIC_ACCESS, $PUBLIC_ACCESS_CAN_ADD;
-  $ret = '';
-  $cnt = 0;
-  $get_unapproved = ( $DISPLAY_UNAPPROVED == 'Y' );
-
-  $year = substr ( $date, 0, 4 );
-  $month = substr ( $date, 4, 2 );
-  $day = substr ( $date, 6, 2 );
-
-  $can_add = ( $readonly == 'N' || $is_admin );
-  if ( $PUBLIC_ACCESS == 'Y' && $PUBLIC_ACCESS_CAN_ADD != 'Y' &&
-    $GLOBALS['login'] == '__public__' )
-    $can_add = false;
-
-  // get all the repeating events for this date and store in array $rep
-  $rep = get_repeating_entries ( $user, $date ) ;
-  $cur_rep = 0;
-
-  // get all the non-repeating events for this date and store in $ev
-  $ev = get_entries ( $date, $get_unapproved );
-
-  // combine and sort the event arrays
-  $ev = combine_and_sort_events($ev, $rep);
-  $evcnt = count ( $ev );
-  for ( $i = 0; $i < $evcnt; $i++ ) {
-    if ( $get_unapproved || $ev[$i]->getStatus() == 'A' ) {
-      $ret .= print_entry_timebar ( $ev[$i], $date );
-      $cnt++;
-    }
-  }
-  if ( $cnt == 0 )
-    $ret .= '&nbsp;'; // so the table cell has at least something
-
-  return $ret;
-}
-
-/**
- * Prints the HTML for an event with a timebar.
- *
- * @param Event  $event The event
- * @param string $date  Date for which we're printing in YYYYMMDD format
- *
- * @staticvar int Used to ensure all event popups have a unique id
- */
-function print_entry_timebar ( $event, $date ) {
-  global $eventinfo, $login, $user, $PHP_SELF, $prefarray, $is_assistant,
-    $is_nonuser_admin, $layers, $PUBLIC_ACCESS_FULLNAME;
-
-  static $key = 0;
-  $insidespan = false;
-  $ret = '';
-  if ( access_is_enabled () ) {
-    $time_only = access_user_calendar ( 'time', $event->getLogin() );
-    $can_access = access_user_calendar ( 'view', $event->getLogin(), '', 
-      $event->getCalType(), $event->getAccess() );    
-  } else {
-    $time_only = 'N';
-    $can_access = CAN_DOALL;
-  }
-
-  // compute time offsets in % of total table width
-  $day_start=$prefarray['WORK_DAY_START_HOUR'] * 60;
-  if ( $day_start == 0 ) $day_start = 1*60;
-  $day_end=$prefarray['WORK_DAY_END_HOUR'] * 60;
-  if ( $day_end == 0 ) $day_end = 23*60;
-  if ( $day_end <= $day_start ) $day_end = $day_start + 60; //avoid exceptions
-
-  $time = date ( 'His', $event->getDateTimeTS() );
-  $endminutes = time_to_minutes ( date ( 'His', $event->getEndDateTimeTS() ) );
-  if ( $time >= 0 ) {
-  $bar_units= 100/(($day_end - $day_start)/60) ; // Percentage each hour occupies
-  $ev_start = round((floor(($time/10000) - ($day_start/60)) + (($time/100)%100)/60) * $bar_units);
-  }else{
-    $ev_start= 0;
-  }
-  if ($ev_start < 0) $ev_start = 0;
-  if ( $event->isAllDay() ) {
-  // All day event
-   $ev_start = 0;
-   $ev_duration = 100;
-  } else  if ( $endminutes < $day_start ) {
-    $ev_duration = 1;  
-  } else  if ($event->getDuration() > 0 ) {
-    $ev_duration = round(100 * $event->getDuration() / ($day_end - $day_start)) ;
-    if ($ev_start + $ev_duration > 100 ) {
-      $ev_duration = 100 - $ev_start;
-    } 
-  } else {
-    if ( $time >= 0) {
-      $ev_duration = 1;
-    } else {
-      $ev_duration=100-$ev_start;
-    }
-  }
-  $ev_padding = 100 - $ev_start - $ev_duration;
-  // choose where to position the text (pos=0->before,pos=1->on,pos=2->after)
-  if ($ev_duration > 20)   { $pos = 1; }
-   elseif ($ev_padding > 20)   { $pos = 2; }
-   else        { $pos = 0; }
- 
-  $ret .= "\n<!-- ENTRY BAR -->\n<table class=\"entrycont\" cellpadding=\"0\" cellspacing=\"0\">\n";
-  $ret .= "<tr>\n";
-  $ret .= ($ev_start > 0 ?  "<td style=\"text-align:right;  width:$ev_start%;\">": '' );
-  if ( $pos > 0 ) {
-    $ret .= ($ev_start > 0 ?  "&nbsp;</td>\n": '' ) ;
-    $ret .= "<td style=\"width:$ev_duration%;\">\n<table class=\"entrybar\">\n<tr>\n<td class=\"entry\">";
-    if ( $pos > 1 ) {
-      $ret .= "&nbsp;</td>\n</tr>\n</table></td>\n";
-      $ret .= "<td style=\"text-align:left; width:$ev_padding%;\">";
-    }
-  };
-
-  if ( $login != $event->getLogin() && strlen ( $event->getLogin() ) ) {
-    $class = 'layerentry';
-  } else {
-    $class = 'entry';
-    if ( $event->getStatus() == 'W' ) $class = 'unapprovedentry';
-  }
-  // if we are looking at a view, then always use "entry"
-  if ( strstr ( $PHP_SELF, 'view_t.php' ) ||
-    strstr ( $PHP_SELF, 'view_w.php' ) ||
-    strstr ( $PHP_SELF, 'view_v.php' ) ||
-    strstr ( $PHP_SELF, 'view_m.php' ) )
-    $class = 'entry';
-
-  if ( $event->getPriority() == 3 ) $ret .= '<strong>';
-
-  $id = $event->getID();
-  $name = $event->getName();
-
-  $popupid = "eventinfo-pop$id-$key";
-  $linkid  = "pop$id-$key";
-  $key++;
-  if ( $can_access != 0 && $time_only != 'Y' ) {
-    //make sure clones have parents url date
-    $linkDate = (  $event->getClone()?$event->getClone(): $date ); 
-    $ret .= "<a class=\"$class\" id=\"$linkid\" " . 
-      " href=\"view_entry.php?id=$id&amp;date=$linkDate";
-    if ( strlen ( $user ) > 0 )
-      $ret .= "&amp;user=" . $user;
-    $ret .= '">';
-  }
-  if ( $login != $event->getLogin() && strlen ( $event->getLogin() ) ) {
-    if ($layers) foreach ($layers as $layer) {
-        if($layer['cal_layeruser'] == $event->getLogin() ) {
-            $insidespan = true;
-            $ret .=('<span style="color:' . $layer['cal_color'] . ';">');
-        }
-    }
-  }
-
-  $ret .= '[' . ( $event->getLogin() == '__public__' ? 
-    $PUBLIC_ACCESS_FULLNAME : $event->getLogin() ) . ']&nbsp;';
-  $timestr = '';
-  if ( $event->isAllDay() ) {
-    $timestr = translate('All day event');
-  } else if ( $time >= 0 ) {
-    $timestr = display_time ( $event->getDatetime() );
-    if ( $event->getDuration() > 0 ) {
-      $timestr .= ' - ' . display_time ( $event->getEndDateTime(), 2 );
-    }
-  }
-  $ret .= build_entry_label ( $event, $popupid, $can_access, $timestr, $time_only );
-
-  if ( $insidespan ) { $ret .= ('</span>'); } //end color span
-  $ret .= '</a>';
-  if ( $event->getPriority() == 3 ) $ret .= '</strong>'; //end font-weight span
-  $ret .= "</td>\n";
-  if ( $pos < 2 ) {
-    if ( $pos < 1 ) {
-      $ret .= "<td style=\"width:$ev_duration%;\"><table  class=\"entrybar\">\n<tr>\n<td class=\"entry\">&nbsp;</td>\n";
-    }
-    $ret .= "</tr>\n</table></td>\n";
-    $ret .= ($ev_padding > 0 ? "<td style=\"text-align:left; width:$ev_padding%;\">&nbsp;</td>\n": '' );
-  }
-  $ret .= "</tr>\n</table>\n";
-
-  return $ret;
-}
-
-/**
- * Prints the header for the timebar.
- *
- * @param int $start_hour Start hour
- * @param int $end_hour   End hour
- */
-function print_header_timebar($start_hour, $end_hour) {
-  //      sh+1   ...   eh-1
-  // +------+----....----+------+
-  // |      |            |      |
-  $ret = '';
-  // print hours
-  if ( ($end_hour - $start_hour) == 0 )
-    $offset = 0;
-  else
-    $offset = (100/($end_hour - $start_hour)/2);
-  //  if ( $offset < 3 ) $offset = 0;
-    $ret .= "\n<!-- TIMEBAR -->\n<table class=\"timebar\">\n<tr><td style=\"width:$offset%;\">&nbsp;</td>\n";
-   for ($i = $start_hour+1; $i < $end_hour; $i++) {
-    $prev_offset = $offset;
-    $offset = round(100/($end_hour - $start_hour)*($i - $start_hour + .5));
-    $width = $offset - $prev_offset;
-    if ( $i > 10 ) $width += .1;
-    $ret .= "<td style=\"width:$width%;text-align:center;\">$i</td>\n";
-   }
-   $width = 100 - ( $offset * 2 );
-   $ret .= "<td width=\"$width%\">&nbsp;</td>\n";
-   $ret .= "</tr></table>\n";
- 
-   // print yardstick
-  $ret .= "\n<!-- YARDSTICK -->\n<table class=\"yardstick\">\n<tr>\n";
-  $offset = 0;
-  for ($i = $start_hour; $i < $end_hour; $i++) {
-    $prev_offset = $offset;
-
-    $width = $offset - $prev_offset;
-    $ret .= "<td style=\"width:$width%;\">&nbsp;</td>\n";
-    $offset = round(100/($end_hour - $start_hour)*($i - $start_hour));
-   }
-   $ret .= "</tr>\n</table>\n<!-- /YARDSTICK -->\n";
-
-  return $ret;
- }
-
 
 /**
  * Determine if the specified user is a participant in the event.
