@@ -1,5 +1,7 @@
 Version 1.1.0-CVS (?? ??? 2006)
   - Fixed the following bug reports on SourceForge:
+      1503762: Table cell bg for current day not diplayed on weekends
+      1505083: get_weekday_before doesn't return a value on
       1502420: daily repeat doesn't skip weekend
       1414471: missing 'back to my calendar' in the trailer for 'non_user'
       1366151: NUC's cannot be handled by their admins
